--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "ci:lint": "eslint '*/**/*.{js,ts,tsx}'",
+    "ci:lint": "eslint '*/**/*.{ts,tsx}'",
     "ci:format": "prettier \"./**/*.{ts,tsx}\"",
     "check:format": "prettier --list-different \"./**/*.{ts,tsx}\"",
     "lint": "yarn ci:lint --fix -f mo",
@@ -14,15 +14,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "next": "10.1.3",
+    "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.4",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "autoprefixer": "^9",
     "eslint": "^7.23.0",
     "eslint-formatter-mo": "^1.0.0",
     "eslint-plugin-functional": "^3.2.1",
@@ -34,7 +38,9 @@
     "eslint-plugin-woke": "^1.0.0",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "postcss": "^7",
     "prettier": "^2.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.2.3"
   },
   "lint-staged": {
